gitops/website/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: website
  namespace: website
spec:
  to:
    kind: Service
    name: website
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
